# HomeworkChekerApp

./: .gitignore  CMakeLists.txt  Checker — skrót.lnk  ReadMe.md  exampleList.csv  main.cpp  main_pl.ts
CSVLib/resources/: CSVlib.lib
UI/: WelcomeWindow.ui
UI/UI/: AddNewMainGroup.cpp  AddNewMainGroup.h  AddNewMainGroup.ui  AssigmentMW.cpp  AssigmentMW.h  AssigmentsMainWindow.ui  WelcomeWindow.cpp  WelcomeWindow.h  WelcomeWindow.ui  addgroup.cpp  addgroup.h  addgroup.ui  addstudent.cpp  addstudent.h  addstudent.ui
doc/: SavedItems.md
lib/: CMakeLists.txt
lib/CSVLib/include/: CSVlib.h
lib/CSVLib/resources/: CSVlib.h
lib/CSVLib/src/: CSVlib.cpp
src/: GroupSettings.cpp  GroupSettings.h  MainGroupSettings.cpp  MainGroupSettings.h  MainWindowInterface.h  MainWindowManager.cpp  MainWindowManager.h  Settings.h  TreeModel.cpp  TreeModel.h  constDeclarations.h
